{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 238,
  "lineage": "04ce8e9e-a928-af4c-0757-49aff14fc07d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wg_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e21260df9c41886",
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:elastic-ip/eipalloc-02e21260df9c41886",
            "association_id": "eipassoc-071719c0d26320880",
            "domain": "vpc",
            "id": "eipalloc-02e21260df9c41886",
            "instance": "i-023c4f04ca64d80a5",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-07519c7bd0f806256",
            "private_dns": "ip-10-10-0-10.ap-southeast-1.compute.internal",
            "private_ip": "10.10.0.10",
            "public_dns": "ec2-47-130-211-91.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.211.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ztlab-wg-gateway-eip"
            },
            "tags_all": {
              "Name": "ztlab-wg-gateway-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005c9e06a21d032e4",
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:instance/i-0e2dd2bc13852f5a4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2dd2bc13852f5a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ztlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043d703e05165b7e6",
            "private_dns": "ip-10-10-4-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.4.10",
            "public_dns": "ec2-13-213-17-143.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.17.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ea1b78936623884",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0348fd29f61a7cd55",
            "tags": {
              "Name": "aws-bastion",
              "Role": "bastion"
            },
            "tags_all": {
              "Name": "aws-bastion",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-084c79275b796d86b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ztlab",
            "aws_security_group.sg_management",
            "aws_subnet.management",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005c9e06a21d032e4",
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:instance/i-023c4f04ca64d80a5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023c4f04ca64d80a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ztlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07519c7bd0f806256",
            "private_dns": "ip-10-10-0-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.10",
            "public_dns": "ec2-47-130-211-91.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.211.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ed9319f30724662",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-02b0df3043e31d662",
            "tags": {
              "Name": "aws-gateway",
              "Role": "wg-server"
            },
            "tags_all": {
              "Name": "aws-gateway",
              "Role": "wg-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf13a8ef1caac09d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ztlab",
            "aws_security_group.sg_dmz",
            "aws_subnet.dmz",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_k3s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005c9e06a21d032e4",
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:instance/i-0cc71e5258fac0166",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc71e5258fac0166",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ztlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0384eedd124f800d3",
            "private_dns": "ip-10-10-1-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0131d7cd4177931d5",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066c1fcb9ef48fbe1",
            "tags": {
              "Name": "aws-k3s-master",
              "Role": "k3s-master"
            },
            "tags_all": {
              "Name": "aws-k3s-master",
              "Role": "k3s-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049d17c572ca21d51"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ztlab",
            "aws_security_group.sg_dmz",
            "aws_security_group.sg_private",
            "aws_subnet.private",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_k3s_worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005c9e06a21d032e4",
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:instance/i-0b1b02b35f7eb8320",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1b02b35f7eb8320",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ztlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e0ea4f9276d262a5",
            "private_dns": "ip-10-10-1-11.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e17fd0c53435a37",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066c1fcb9ef48fbe1",
            "tags": {
              "Name": "aws-k3s-worker-1",
              "Role": "k3s-worker"
            },
            "tags_all": {
              "Name": "aws-k3s-worker-1",
              "Role": "k3s-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049d17c572ca21d51"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ztlab",
            "aws_security_group.sg_dmz",
            "aws_security_group.sg_private",
            "aws_subnet.private",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_k3s_worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005c9e06a21d032e4",
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:instance/i-0790071e37199740e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0790071e37199740e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ztlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df05bba7ecd9f746",
            "private_dns": "ip-10-10-1-12.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fae3c8707d7397ca",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066c1fcb9ef48fbe1",
            "tags": {
              "Name": "aws-k3s-worker-2",
              "Role": "k3s-worker"
            },
            "tags_all": {
              "Name": "aws-k3s-worker-2",
              "Role": "k3s-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049d17c572ca21d51"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ztlab",
            "aws_security_group.sg_dmz",
            "aws_security_group.sg_private",
            "aws_subnet.private",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005c9e06a21d032e4",
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:instance/i-0dd631c205c184030",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd631c205c184030",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ztlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b9c5f18881c5fcf",
            "private_dns": "ip-10-10-1-20.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e4bbf0df556cb4f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066c1fcb9ef48fbe1",
            "tags": {
              "Name": "aws-security",
              "Role": "spire-keycloak"
            },
            "tags_all": {
              "Name": "aws-security",
              "Role": "spire-keycloak"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049d17c572ca21d51"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ztlab",
            "aws_security_group.sg_dmz",
            "aws_security_group.sg_private",
            "aws_subnet.private",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_siem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005c9e06a21d032e4",
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:instance/i-078f608e02988b0f9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078f608e02988b0f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ztlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc518910fe614959",
            "private_dns": "ip-10-10-2-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-00afbc5cc4d1ed17e",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb793a161ea94e4d",
            "tags": {
              "Name": "aws-siem",
              "Role": "siem"
            },
            "tags_all": {
              "Name": "aws-siem",
              "Role": "siem"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e23467b62b599856"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ztlab",
            "aws_security_group.sg_restricted",
            "aws_subnet.restricted_a",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ztlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:internet-gateway/igw-0b53a9972c4951794",
            "id": "igw-0b53a9972c4951794",
            "owner_id": "941862399628",
            "tags": {
              "Name": "ztlab-igw"
            },
            "tags_all": {
              "Name": "ztlab-igw"
            },
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:route-table/rtb-022c61f9af183d85a",
            "id": "rtb-022c61f9af183d85a",
            "owner_id": "941862399628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-07519c7bd0f806256",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ztlab-private-egress-rt"
            },
            "tags_all": {
              "Name": "ztlab-private-egress-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.aws_gateway",
            "aws_key_pair.ztlab",
            "aws_security_group.sg_dmz",
            "aws_subnet.dmz",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:route-table/rtb-02c2322376b9d9778",
            "id": "rtb-02c2322376b9d9778",
            "owner_id": "941862399628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b53a9972c4951794",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ztlab-public-rt"
            },
            "tags_all": {
              "Name": "ztlab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ztlab",
            "aws_vpc.ztlab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c175e74ad588eab",
            "route_table_id": "rtb-02c2322376b9d9778",
            "subnet_id": "subnet-02b0df3043e31d662"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ztlab",
            "aws_route_table.public",
            "aws_subnet.dmz",
            "aws_vpc.ztlab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d14e3b0544c5a1d2",
            "route_table_id": "rtb-02c2322376b9d9778",
            "subnet_id": "subnet-0348fd29f61a7cd55"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ztlab",
            "aws_route_table.public",
            "aws_subnet.management",
            "aws_vpc.ztlab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0536ecee361ec25b9",
            "route_table_id": "rtb-022c61f9af183d85a",
            "subnet_id": "subnet-066c1fcb9ef48fbe1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.aws_gateway",
            "aws_key_pair.ztlab",
            "aws_route_table.private_egress",
            "aws_security_group.sg_dmz",
            "aws_subnet.dmz",
            "aws_subnet.private",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "restricted_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018987490016a27ab",
            "route_table_id": "rtb-022c61f9af183d85a",
            "subnet_id": "subnet-0bb793a161ea94e4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.aws_gateway",
            "aws_key_pair.ztlab",
            "aws_route_table.private_egress",
            "aws_security_group.sg_dmz",
            "aws_subnet.dmz",
            "aws_subnet.restricted_a",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "restricted_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae2881d5778d5ceb",
            "route_table_id": "rtb-022c61f9af183d85a",
            "subnet_id": "subnet-028f7a5b9cf1a378b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.aws_gateway",
            "aws_key_pair.ztlab",
            "aws_route_table.private_egress",
            "aws_security_group.sg_dmz",
            "aws_subnet.dmz",
            "aws_subnet.restricted_b",
            "aws_vpc.ztlab",
            "data.aws_ami.ubuntu22",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:security-group/sg-0cf13a8ef1caac09d",
            "description": "DMZ zone security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf13a8ef1caac09d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WireGuard",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Forwarded traffic from internal subnets",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ztlab-sg-dmz",
            "name_prefix": "",
            "owner_id": "941862399628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-dmz"
            },
            "tags_all": {
              "Name": "sg-dmz"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:security-group/sg-084c79275b796d86b",
            "description": "Management zone security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084c79275b796d86b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ztlab-sg-management",
            "name_prefix": "",
            "owner_id": "941862399628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-management"
            },
            "tags_all": {
              "Name": "sg-management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:security-group/sg-049d17c572ca21d51",
            "description": "Private zone security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049d17c572ca21d51",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24",
                  "10.10.4.0/24"
                ],
                "description": "SPIRE Server",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24",
                  "10.44.0.0/16"
                ],
                "description": "Intra-zone and cross-cloud pods",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "K3s API",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.10.2.0/24"
                ],
                "description": "Prometheus scrape",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "10.10.4.10/32"
                ],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App traffic from DMZ",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cf13a8ef1caac09d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "App traffic from DMZ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cf13a8ef1caac09d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ztlab-sg-private",
            "name_prefix": "",
            "owner_id": "941862399628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-private"
            },
            "tags_all": {
              "Name": "sg-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_dmz",
            "aws_vpc.ztlab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:security-group/sg-0e23467b62b599856",
            "description": "Restricted zone security group for PLG Stack (Loki + Grafana)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e23467b62b599856",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24",
                  "10.10.4.0/24",
                  "10.10.4.0/24"
                ],
                "description": "Loki - log collection from all nodes",
                "from_port": 3100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3100
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "SSH from management",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.4.10/32"
                ],
                "description": "Grafana web UI - from bastion only",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ztlab-sg-restricted",
            "name_prefix": "",
            "owner_id": "941862399628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-restricted"
            },
            "tags_all": {
              "Name": "sg-restricted"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:subnet/subnet-02b0df3043e31d662",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b0df3043e31d662",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941862399628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ztlab-dmz"
            },
            "tags_all": {
              "Name": "ztlab-dmz"
            },
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:subnet/subnet-0348fd29f61a7cd55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0348fd29f61a7cd55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941862399628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ztlab-management"
            },
            "tags_all": {
              "Name": "ztlab-management"
            },
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:subnet/subnet-066c1fcb9ef48fbe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066c1fcb9ef48fbe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941862399628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ztlab-private"
            },
            "tags_all": {
              "Name": "ztlab-private"
            },
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "restricted_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:subnet/subnet-0bb793a161ea94e4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb793a161ea94e4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941862399628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ztlab-restricted-a"
            },
            "tags_all": {
              "Name": "ztlab-restricted-a"
            },
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "restricted_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:subnet/subnet-028f7a5b9cf1a378b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028f7a5b9cf1a378b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941862399628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ztlab-restricted-b"
            },
            "tags_all": {
              "Name": "ztlab-restricted-b"
            },
            "vpc_id": "vpc-0aea7b6eaed6abd0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ztlab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ztlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:941862399628:vpc/vpc-0aea7b6eaed6abd0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-073153a354def1ce0",
            "default_route_table_id": "rtb-0483f522cdec08b1b",
            "default_security_group_id": "sg-07b4dcf63b7afd6d7",
            "dhcp_options_id": "dopt-00a14c663bafb97a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aea7b6eaed6abd0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0483f522cdec08b1b",
            "owner_id": "941862399628",
            "tags": {
              "Name": "ztlab-vpc",
              "Project": "ztlab"
            },
            "tags_all": {
              "Name": "ztlab-vpc",
              "Project": "ztlab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}